--- a/turtle_driver/CMakeLists.txt
+++ b/turtle_driver/CMakeLists.txt
@@ -10,6 +10,9 @@ project(turtle_driver)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
+  std_msgs
+  message_generation
+  geometry_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -55,8 +58,6 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
 # add_service_files(
 #   FILES
-#   Service1.srv
-#   Service2.srv
 # )
 
 ## Generate actions in the 'action' folder
@@ -102,9 +103,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES turtle_driver
-#  CATKIN_DEPENDS roscpp rospy
+# INCLUDE_DIRS include
+ #LIBRARIES turtle_driver
+ CATKIN_DEPENDS roscpp rospy message_runtime std_msgs geometry_msgs
 #  DEPENDS system_lib
 )
 
