--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 log.txt
 
 # Ignore local Cmakelist.txt
-CMakeLists.txt
+~/src/CMakeLists.txt
 .vscode/browse.vc.db
 .vscode/c_cpp_properties.json
 .vscode/settings.json
 turtle_driver/scripts/__pycache__/PID.cpython-38.pyc
 .vscode/browse.vc.db-shm
 .vscode/browse.vc.db-wal
+CMakeLists.txt
